--- a/nginx.conf
+++ b/nginx.conf
@@ -26,7 +26,7 @@ server {
     server_name appsfortracking.test;
 
     location / {
-        proxy_pass http://appsfortracking/;
+        proxy_pass http://apps4tracking/;
     }
 }
 server {
