--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Digitalocean docker setup",
   "main": "index.js",
   "scripts": {
-    "build-home1": "DATA_DIR=/mnt/volume_sfo2_02/cj make bup-home",
-    "build-home2": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make bup-home",
-    "build-do": "DATA_DIR=/mnt/volume_sfo2_02/cj make bup-home"
+    "bup-home1": "DATA_DIR=/mnt/volume_sfo2_02/cj make bup-home",
+    "bup-home2": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make bup-home",
+    "bup-do": "DATA_DIR=/mnt/volume_sfo2_02/cj make bup-home"
   },
   "repository": {
     "type": "git",
