--- a/nginx.conf
+++ b/nginx.conf
@@ -1,71 +1,109 @@
 root /user/share/nginx/html;
-server {
-    listen 80;
-    listen [::]:80;
 
-    server_name home.test;
+# home
+server { 
+    listen 443 ssl;
+    server_name home.home;
+
+    ssl_certificate /etc/ssl/homehome.crt;
+    ssl_certificate_key /etc/ssl/homehome.key;
 
     location / {
         proxy_pass http://home-root/;
     }
 }
+
 server {
     listen 80;
-    listen [::]:80;
-
-    server_name apps4tracking.test;
-
-    location / {
-        proxy_pass http://apps4tracking/;
-    }
+    server_name home.test home.home;
+    return 301 https://home.home$request_uri;
 }
-server {
-    listen 80;
-    listen [::]:80;
 
-    server_name appsfortracking.test;
+# apps4tracking
+# server {
+#     listen 80;
+#     server_name apps4tracking.test apps4tracking.home;
+#     location / {
+#         proxy_pass http://apps4tracking/;
+#     }
+# }
 
-    location / {
-        proxy_pass http://apps4tracking/;
-    }
-}
-server {
-    listen 80;
-    listen [::]:80;
+# appsfortracking
+# server {
+#     listen 80;
+#     listen [::]:80;
 
-    server_name carltonathome.test;
+#     server_name appsfortracking.test appsfortracking.home;
 
+#     location / {
+#         proxy_pass http://apps4tracking/;
+#     }
+# }
+
+# carltonathome
+server { 
+    listen 443 ssl;
+    server_name carltonathome.home;
+
+    ssl_certificate /etc/ssl/carltonathomehome.crt;
+    ssl_certificate_key /etc/ssl/carltonathomehome.key;
     location / {
         proxy_pass http://carltonathome/;
     }
 }
 server {
     listen 80;
-    listen [::]:80;
+    server_name carltonathome.test carltonathome.home;
+    return 301 https://carltonathome.home$request_uri;
+}
 
-    server_name carltonjoseph.test;
+# carltonjoseph
+server { 
+    listen 443 ssl;
+    server_name carltonjoseph.home;
 
+    ssl_certificate /etc/ssl/carltonjosephhome.crt;
+    ssl_certificate_key /etc/ssl/carltonjosephhome.key;
     location / {
         proxy_pass http://carltonjoseph/;
     }
 }
 server {
     listen 80;
-    listen [::]:80;
+    server_name carltonjoseph.test carltonjoseph.home;
+    return 301 https://carltonjoseph.home$request_uri;
+}
 
-    server_name carltonwin8.test;
+# carltonwin8
+server { 
+    listen 443 ssl;
+    server_name carltonwin8.home;
 
+    ssl_certificate /etc/ssl/carltonwin8home.crt;
+    ssl_certificate_key /etc/ssl/carltonwin8home.key;
     location / {
         proxy_pass http://carltonwin8/;
     }
 }
 server {
     listen 80;
-    listen [::]:80;
+    server_name carltonwin8.test carltonwin8.home;
+    return 301 https://carltonwin8.home$request_uri;
+}
 
-    server_name tinaandcarlton.test;
+# tinaandcarlton
+server { 
+    listen 443 ssl;
+    server_name tinaandcarlton.home;
 
+    ssl_certificate /etc/ssl/tinaandcarltonhome.crt;
+    ssl_certificate_key /etc/ssl/tinaandcarltonhome.key;
     location / {
         proxy_pass http://tinaandcarlton/;
     }
+}
+server {
+    listen 80;
+    server_name tinaandcarlton.test tinaandcarlton.home;
+    return 301 https://tinaandcarlton.home$request_uri;
 }
