--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -19,10 +19,18 @@ server {
 }
 
 # carltonwin8
-server {
-    listen 80;
+server { 
+    listen 443 ssl;
     server_name carltonwin8.com;
+
+    ssl_certificate /etc/ssl/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/privkey1.pem;
     location / {
         proxy_pass http://carltonwin8/;
     }
+}
+server {
+    listen 80;
+    server_name carltonwin8.com;
+    return 301 https://carltonwin8.com$request_uri;
 }
