add ssl carltonathome

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -10,12 +10,20 @@ server {
 }
 
 # carltonathome
-server {
-    listen 80;
+server { 
+    listen 443 ssl;
     server_name carltonathome.com;
+
+    ssl_certificate /etc/ssl/carltonathome.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/carltonathome.com/privkey1.pem;
     location / {
         proxy_pass http://carltonathome/;
     }
+}
+server {
+    listen 80;
+    server_name carltonathome.com;
+    return 301 https://carltonathome.com$request_uri;
 }
 
 # carltonwin8
@@ -23,8 +31,8 @@ server {
     listen 443 ssl;
     server_name carltonwin8.com;
 
-    ssl_certificate /etc/ssl/fullchain1.pem;
-    ssl_certificate_key /etc/ssl/privkey1.pem;
+    ssl_certificate /etc/ssl/carltonwin8.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/carltonwin8.com/privkey1.pem;
     location / {
         proxy_pass http://carltonwin8/;
     }
