--- a/docker-compose-do.yml
+++ b/docker-compose-do.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ${PWD}/nginx-do.conf:/etc/nginx/conf.d/nginx.conf
       - ${DATA_DIR}/home-root:/usr/share/nginx/html
-      - ${PWD}/cert/archive/carltonwin8.com:/etc/ssl
+      - ${PWD}/cert/archive:/etc/ssl
   carltonathome:
     image: php:7.2.1-apache
     ports:
