--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -42,3 +42,20 @@ server {
     server_name carltonwin8.com;
     return 301 https://carltonwin8.com$request_uri;
 }
+
+# tinaandcarlton
+server { 
+    listen 443 ssl;
+    server_name tinaandcarlton.com;
+
+    ssl_certificate /etc/ssl/tinaandcarlton.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/tinaandcarlton.com/privkey1.pem;
+    location / {
+        proxy_pass http://tinaandcarlton/;
+    }
+}
+server {
+    listen 80;
+    server_name tinaandcarlton.com;
+    return 301 https://tinaandcarlton.com$request_uri;
+}
