--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -59,3 +59,37 @@ server {
     server_name tinaandcarlton.com;
     return 301 https://tinaandcarlton.com$request_uri;
 }
+
+# appsfortracking
+server { 
+    listen 443 ssl;
+    server_name appsfortracking.com;
+
+    ssl_certificate /etc/ssl/appsfortracking.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/appsfortracking.com/privkey1.pem;
+    location / {
+        proxy_pass http://appsfortracking:3000/;
+    }
+}
+server {
+    listen 80;
+    server_name appsfortracking.com;
+    return 301 https://appsfortracking.com$request_uri;
+}
+
+# apps4tracking
+server { 
+    listen 443 ssl;
+    server_name apps4tracking.com;
+
+    ssl_certificate /etc/ssl/apps4tracking.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/apps4tracking.com/privkey1.pem;
+    location / {
+        proxy_pass http://appsfortracking:3000/;
+    }
+}
+server {
+    listen 80;
+    server_name apps4tracking.com;
+    return 301 https://apps4tracking.com$request_uri;
+}
