--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "down-do": "DATA_DIR=/mnt/volume_sfo2_02/cj make down-do",
     "bup-home2-apps": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make bup-home-apps",
     "up-home2-apps": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make up-home-apps",
-    "down-home2-apps": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make down-home-apps"
+    "down-home2-apps": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make down-home-apps",
+    "restart-do-apps": "DATA_DIR=/mnt/volume_sfo2_02/cj make restart-do-apps"
   },
   "repository": {
     "type": "git",
