--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -93,3 +93,21 @@ server {
     server_name apps4tracking.com;
     return 301 https://apps4tracking.com$request_uri;
 }
+# carltonjoseph
+server { 
+    listen 443 ssl;
+    server_name carltonjoseph.com;
+
+    ssl_certificate /etc/ssl/carltonjoseph.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/carltonjoseph.com/privkey1.pem;
+    location / {
+        proxy_pass http://carltonjoseph/;
+    }
+}
+server {
+    listen 80;
+    server_name carltonjoseph.com;
+    return 301 https://carltonjoseph.com$request_uri;
+}
+
+
