--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -109,5 +109,22 @@ server {
     server_name carltonjoseph.com;
     return 301 https://carltonjoseph.com$request_uri;
 }
+# sophieandchampagne
+server { 
+    listen 443 ssl;
+    server_name sophieandchampagne.com;
+
+    ssl_certificate /etc/ssl/sophieandchampagne.com/fullchain1.pem;
+    ssl_certificate_key /etc/ssl/sophieandchampagne.com/privkey1.pem;
+    location / {
+        proxy_pass http://sophieandchampagne/;
+    }
+}
+server {
+    listen 80;
+    server_name sophieandchampagne.com;
+    return 301 https://sophieandchampagne.com$request_uri;
+}
+
 
 
