--- a/nginx-home.conf
+++ b/nginx-home.conf
@@ -1,43 +1,72 @@
-root /Users/carltonjoseph/cj/cj2020/websites/home-root
+root /Users/carltonjoseph/cj/cj2020/websites/home-root;
+
+# home
+server {
+    listen 80;
+    server_name 10.0.0.116;
+    location / {
+        proxy_pass http://home-root/;
+    }
+}
 
 # carltonathome
 server {
     listen 80;
     server_name carltonathome.local;
+    location / {
+        proxy_pass http://carltonathome/;
+    }
 }
 
 # carltonwin8
 server {
     listen 80;
     server_name carltonwin8.local;
+    location / {
+        proxy_pass http://carltonwin8/;
+    }
 }
 
 # tinaandcarlton
 server {
     listen 80;
     server_name tinaandcarlton.local;
+    location / {
+        proxy_pass http://tinaandcarlton/;
+    }
 }
 
 # appsfortracking
 server {
     listen 80;
     server_name appsfortracking.local;
+    location / {
+        proxy_pass http://appsfortracking/;
+    }
 }
 
 # apps4tracking
 server {
     listen 80;
     server_name apps4tracking.local;
+    location / {
+        proxy_pass http://appsfortracking/;
+    }
 }
 # carltonjoseph
 server {
     listen 80;
     server_name carltonjoseph.local;
+    location / {
+        proxy_pass http://carltonjoseph/;
+    }
 }
 # sophieandchampagne
-server { 
 server {
     listen 80;
     server_name sophieandchampagne.local;
+    location / {
+        proxy_pass http://sophieandchampagne/;
+    }
 }
 
