--- a/nginx-home.conf
+++ b/nginx-home.conf
@@ -1,14 +1,5 @@
-root /Users/carltonjoseph/cj/cj2020/websites/home-root;
-
 # home
-server {
-    listen 80;
-    server_name 10.0.0.116;
-    location / {
-        proxy_pass http://home-root/;
-    }
-}
-
+root /Users/carltonjoseph/cj/cj2020/websites/home-root/www;
 # carltonathome
 server {
     listen 80;
@@ -17,55 +8,46 @@ server {
         proxy_pass http://carltonathome/;
     }
 }
-
 # carltonwin8
 server {
     listen 80;
     server_name carltonwin8.local;
-    location / {
-        proxy_pass http://carltonwin8/;
-    }
+    root /www/carltonwin8/web;
 }
-
 # tinaandcarlton
 server {
     listen 80;
     server_name tinaandcarlton.local;
-    location / {
-        proxy_pass http://tinaandcarlton/;
-    }
+    root /www/tinaandcarlton/web;
 }
-
 # appsfortracking
 server {
     listen 80;
-    server_name appsfortracking.local;
-    location / {
+    server_name appsfortracking.local apps4tracking.local;
+    root /www/apps4tracking/web;
+    location /api {
         proxy_pass http://appsfortracking/;
     }
 }
-
 # apps4tracking
-server {
-    listen 80;
-    server_name apps4tracking.local;
-    location / {
-        proxy_pass http://appsfortracking/;
-    }
-}
+#server {
+#    listen 80;
+#    server_name appsfor4tracking.local;
+#    rewrite ^/$ http://appsfortracking.local redirect;
+#}
 # carltonjoseph
 server {
     listen 80;
     server_name carltonjoseph.local;
-    location / {
-        proxy_pass http://carltonjoseph/;
-    }
+    root /www/carltonjoseph/web;
 }
 # sophieandchampagne
 server {
     listen 80;
     server_name sophieandchampagne.local;
-    location / {
+    root /www/sophieandchampagne/web;
+    index index.html;
+    location /api {
         proxy_pass http://sophieandchampagne/;
     }
 }
