--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "do2home": "ts-node-dev --no-notify --clear ./src/do2home.ts",
     "do2home:dev": "ts-node-dev --respawn --no-notify --clear ./src/do2home.ts",
-    "build": "tsc",
+    "do2home:build": "tsc",
+    "openwww": "ts-node-dev --no-notify --clear ./src/openwww.ts",
     "postbuild": "cp -R node_modules dst/node_modules",
     "bup-home1": "DATA_DIR=/mnt/volume_sfo2_02/cj make bup-home",
     "bup-home2": "DATA_DIR=/Volumes/cjs/cj/volume_sfo2_02/cj make bup-home",
