--- a/docker-compose-home.yml
+++ b/docker-compose-home.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8103:80"
     volumes:
-      - ${DATA_DIR}/carltonathome:/var/www/html
+      - ${DATA_DIR}/carltonathome/web:/var/www/html
     domainname: carltonathome.com
   appsfortracking:
     image: "node"
