--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -1,13 +1,5 @@
-root /user/share/nginx/html;
-
 # home
-server {
-    listen 80;
-    server_name 167.99.101.204;
-    location / {
-        proxy_pass http://home-root/;
-    }
-}
+root /user/share/nginx/html;
 
 # carltonathome
 server { 
@@ -30,12 +22,10 @@ server {
 server { 
     listen 443 ssl;
     server_name carltonwin8.com;
+    root /www/carltonwin8/web;
 
     ssl_certificate /etc/ssl/carltonwin8.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/carltonwin8.com/privkey6.pem;
-    location / {
-        proxy_pass http://carltonwin8/;
-    }
 }
 server {
     listen 80;
@@ -47,12 +37,10 @@ server {
 server { 
     listen 443 ssl;
     server_name tinaandcarlton.com;
+    root /www/tinaandcarlton/web;
 
     ssl_certificate /etc/ssl/tinaandcarlton.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/tinaandcarlton.com/privkey6.pem;
-    location / {
-        proxy_pass http://tinaandcarlton/;
-    }
 }
 server {
     listen 80;
@@ -63,11 +51,12 @@ server {
 # appsfortracking
 server { 
     listen 443 ssl;
-    server_name appsfortracking.com;
+    server_name appsfortracking.com apps4tracking.com;
+    root /www/apps4tracking/web;
 
     ssl_certificate /etc/ssl/appsfortracking.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/appsfortracking.com/privkey6.pem;
-    location / {
+    location /api {
         proxy_pass http://appsfortracking:5000/;
     }
 }
@@ -77,32 +66,14 @@ server {
     return 301 https://appsfortracking.com$request_uri;
 }
 
-# apps4tracking
-server { 
-    listen 443 ssl;
-    server_name apps4tracking.com;
-
-    ssl_certificate /etc/ssl/apps4tracking.com/fullchain6.pem;
-    ssl_certificate_key /etc/ssl/apps4tracking.com/privkey6.pem;
-    location / {
-        proxy_pass http://appsfortracking:5000/;
-    }
-}
-server {
-    listen 80;
-    server_name apps4tracking.com;
-    return 301 https://apps4tracking.com$request_uri;
-}
 # carltonjoseph
 server { 
     listen 443 ssl;
     server_name carltonjoseph.com;
+    root /www/carltonjoseph/web;
 
     ssl_certificate /etc/ssl/carltonjoseph.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/carltonjoseph.com/privkey6.pem;
-    location / {
-        proxy_pass http://carltonjoseph/;
-    }
 }
 server {
     listen 80;
@@ -113,10 +84,11 @@ server {
 server { 
     listen 443 ssl;
     server_name sophieandchampagne.com;
-
+    root /www/sophieandchampagne/web;
+    
     ssl_certificate /etc/ssl/sophieandchampagne.com/fullchain1.pem;
     ssl_certificate_key /etc/ssl/sophieandchampagne.com/privkey1.pem;
-    location / {
+    location /api {
         proxy_pass http://sophieandchampagne/;
     }
 }
