--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -51,7 +51,7 @@ server {
 # appsfortracking
 server { 
     listen 443 ssl;
-    server_name appsfortracking.com apps4tracking.com;
+    server_name appsfortracking.com;
     root /www/apps4tracking/web;
 
     ssl_certificate /etc/ssl/appsfortracking.com/fullchain6.pem;
@@ -65,6 +65,25 @@ server {
     server_name appsfortracking.com;
     return 301 https://appsfortracking.com$request_uri;
 }
+
+# apps4tracking
+server { 
+    listen 443 ssl;
+    server_name apps4tracking.com;
+    root /www/appsfortracking/web;
+
+    ssl_certificate /etc/ssl/apps4tracking.com/fullchain6.pem;
+    ssl_certificate_key /etc/ssl/apps4tracking.com/privkey6.pem;
+    location /api {
+        proxy_pass http://appsfortracking:5000/;
+    }
+}
+server {
+    listen 80;
+    server_name appsfortracking.com;
+    return 301 https://appsfortracking.com$request_uri;
+}
+
 
 # carltonjoseph
 server { 
