--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -80,8 +80,8 @@ server {
 }
 server {
     listen 80;
-    server_name appsfortracking.com;
-    return 301 https://appsfortracking.com$request_uri;
+    server_name apps4tracking.com;
+    return 301 https://apps4tracking.com$request_uri;
 }
 
 
