fix app4fortracking nginx config

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -70,7 +70,7 @@ server {
 server { 
     listen 443 ssl;
     server_name apps4tracking.com;
-    root /www/appsfortracking/web;
+    root /www/apps4tracking/web;
 
     ssl_certificate /etc/ssl/apps4tracking.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/apps4tracking.com/privkey6.pem;
