update nginx setup for carltonjoseph.com

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -93,6 +93,9 @@ server {
 
     ssl_certificate /etc/ssl/carltonjoseph.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/carltonjoseph.com/privkey6.pem;
+    location /goals {
+        root /www/carltonjoseph/goals;
+    }
 }
 server {
     listen 80;
