fix nginx redirects

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -89,13 +89,10 @@ server {
 server { 
     listen 443 ssl;
     server_name carltonjoseph.com;
-    root /www/carltonjoseph/web;
+    root /www/carltonjoseph/;
 
     ssl_certificate /etc/ssl/carltonjoseph.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/carltonjoseph.com/privkey6.pem;
-    location /goals {
-        root /www/carltonjoseph/goals;
-    }
 }
 server {
     listen 80;
