--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -39,6 +39,8 @@ server {
     server_name tinaandcarlton.com;
     root /www/tinaandcarlton/web;
 
+    rewrite ^/$ http://tinaandcarlton.com/vietnam redirect;
+    
     ssl_certificate /etc/ssl/tinaandcarlton.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/tinaandcarlton.com/privkey6.pem;
 }
@@ -90,6 +92,8 @@ server {
     listen 443 ssl;
     server_name carltonjoseph.com;
     root /www/carltonjoseph/;
+    
+    rewrite ^/$ http://carltonjoseph.com/resume redirect;
 
     ssl_certificate /etc/ssl/carltonjoseph.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/carltonjoseph.com/privkey6.pem;
