add auth to some paths

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -97,6 +97,16 @@ server {
 
     ssl_certificate /etc/ssl/carltonjoseph.com/fullchain6.pem;
     ssl_certificate_key /etc/ssl/carltonjoseph.com/privkey6.pem;
+    location /test {
+        try_files $uri $uri/ =404;
+        auth_basic "Restricted Content";
+        auth_basic_user_file /www/carltonjoseph/test/.htpasswd;
+    }
+    location /goals {
+        try_files $uri $uri/ =404;
+        auth_basic "Restricted Content";
+        auth_basic_user_file /www/carltonjoseph/test/.htpasswd;
+    }
 }
 server {
     listen 80;
