setup sophie and champagne like tina and carlton

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -114,8 +114,10 @@ server {
     server_name sophieandchampagne.com;
     root /www/sophieandchampagne/web;
     
-    ssl_certificate /etc/ssl/sophieandchampagne.com/fullchain1.pem;
-    ssl_certificate_key /etc/ssl/sophieandchampagne.com/privkey1.pem;
+    rewrite ^/$ http://sophieandchampagne.com/main redirect;
+    
+    ssl_certificate /etc/ssl/sophieandchampagne.com/fullchain2.pem;
+    ssl_certificate_key /etc/ssl/sophieandchampagne.com/privkey2.pem;
     location /api {
         proxy_pass http://sophieandchampagne/;
     }
