add corey subsite

--- a/nginx-do.conf
+++ b/nginx-do.conf
@@ -115,6 +115,10 @@ server {
     root /www/sophieandchampagne/web;
     
     rewrite ^/$ http://sophieandchampagne.com/main redirect;
+    rewrite ^/corey$ http://sophieandchampagne.com/corey/main redirect;
+    rewrite ^/corey/$ http://sophieandchampagne.com/corey/main redirect;
+    rewrite ^/corey2020bday$ http://sophieandchampagne.com/corey/2020/birthday redirect;
+    rewrite ^/corey2020bday/$ http://sophieandchampagne.com/corey/2020/birthday redirect;
     
     ssl_certificate /etc/ssl/sophieandchampagne.com/fullchain2.pem;
     ssl_certificate_key /etc/ssl/sophieandchampagne.com/privkey2.pem;
